admin portal design (zeta) (final)
Finally!!
Everything's working relative to the admin portal backend.

--- a/views/student_edit.ejs
+++ b/views/student_edit.ejs
@@ -363,7 +363,7 @@
         </form>        
 
 
-        <!-- Room Details -->
+        <!-- Backlogs -->
         <form action="./student_edit" method="POST">
           <label for="category">
             <input
