--- a/views/research_edit.ejs
+++ b/views/research_edit.ejs
@@ -1,80 +1,259 @@
 <!DOCTYPE html>
 <html lang="en">
+
+  <style>
+
+    button, .bt {
+      box-shadow: 0px 5px 0px 0px #282828;
+      background:linear-gradient(to bottom, #eae0c2 5%, #ccc2a6 100%);
+      background-color:#ebdbb2;
+      border-radius:15px;
+      border:2px solid #282828;
+      cursor:pointer;
+      color:#32302f;
+      font-family: 'Montserrat';
+      font-size:20px;
+      padding:12px 20px;
+      text-decoration:none;
+      text-shadow:0px 1px 0px #ffffff;
+      width: 200px;
+    }
+    button, .bt:hover {
+      background:linear-gradient(to bottom, #ccc2a6 5%, #ebdbb2 100%);
+      background-color:#ebdbb2;
+    }
+
+    input[type=text] {
+      font-family: 'Montserrat';
+      font-size:20px;
+      padding: 12px 16px;
+      margin: 8px 0;
+      box-sizing: border-box;
+      background-color:#32302f;
+      border:1px solid #ebdbb2;
+      color: #ebdbb2;
+      border-radius:20px;
+      width: 400px;
+    }
+
+    form{
+      margin-top: 0px;
+      margin-left: 300px;
+    }
+
+    #dashboard{
+      margin-top: 50px;
+      margin-left: 30px;
+      width: 1000px;
+      height: 600px;
+      padding: 10px;
+      border: 2px solid #ebdbb2;
+      border-radius: 15px;
+      background-color: #282828;
+      overflow-y:auto;
+    }
+
+    #photo{
+      width: 200px; 
+      height: 200px; 
+      margin-top: 125px; 
+      margin-left: 60px;
+      border-radius: 15px;
+    }
+
+    #info{ 
+      font-family: 'Montserrat';
+      font-size:20px;
+      width:200px;
+      height: 100px; 
+      margin-top: 0; 
+      margin-left: 0;
+    }
+
+    #label{
+      font-size:20px;
+      font-weight: 600;
+    }
+
+    td{
+      min-width: 150px;
+      padding: 0px 20px 0px 20px;
+    }
+
+    input{
+      text-align: center;
+    }
+
+    tr#label:hover {
+      background-color: rgba(0, 0, 0, 0.3);
+    }
+
+    a{
+      text-decoration: none;
+    }
+
+    bt{
+      width: 200px; 
+      height: 200px; 
+      margin-top: 125px; 
+      margin-left: 60px;
+      border-radius: 15px;
+    }
+
+  </style>
+
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Research Edit</title>
+    <title>Student Edit</title>
   </head>
   <body>
-    <button 
-    style=
-     "background-color: #282828;
-      border: 1px solid #ebdbb2;
-      color: #ebdbb2;
-      padding: 20px 20px;
-      text-align: center;
-      font-size: 20px;
-      position: absolute;
-      top:50px;
-      left:80px;
-      border-radius: 10px;"
-      onclick="window.location.href = '/admin/admin_portal';">
-      Back
-    </button>
-    <!-- Research Id -->
-    <p><%=research_id%></p>
-    
-    <!-- Name -->
-    <form action="./research_edit" method="POST">
-        <label for="category">
-            <input type="text" value="name" name="category" style="display: none;" />
-        </label>
-        <label for="research_name">
-            <input type="text" value="<%=research_name%>" name="research_name" required />
-        </label>
-        <button type="submit" formnovalidate>SUBMIT</button>
-    </form>
-    
-    <!-- Proposers -->
-    <form action="./research_edit" method="POST">
-        <label for="category">
-            <input type="text" value="proposers" name="category" style="display: none;" />
-        </label>
-        <% if(proposers.length != 0) { %>
-        <% for(let i=0; i<proposers.length; i++) {%>
-        <label for="proposers">
-            <input type="text" value="<%=proposers[i]%>" name="proposers" required />
-        </label>
-        <% } %>
-        <button type="submit">SUBMIT</button>
-        <% } %>
-    </form>
+        <div id="dashboard">
+        <button 
+        style=
+            "position: absolute;
+            top:80px;
+            left:350px;
+            border-radius: 10px;
+            width:150px;"
+            onclick="window.location.href = '/admin/admin_portal';">Go Back</button>
+        <div id="info"  style="float:none">
+        <!-- Club ID & Name -->
+        <form action="./research_edit" method="POST">
+            <label for="category">
+            <input
+                type="text"
+                value="name"
+                name="category"
+                style="display: none;"
+            />
+            </label>
+            <table border="0" cellpadding="3">
+            <tr id="label">
+                <td>Research ID</td>
+                <td>      
+                <label for="research_id">
+                <input type="text" value="<%=research_id%>" name="club_id" required />
+                </label>
+                </td>
+            </tr>
+            <tr id="label">
+                <td>Research Name</td>
+                <td>      
+                    <label for="research_name">
+                        <input type="text" value="<%=research_name%>" name="research_name" required />
+                    </label>
+                </td>
+            </tr>
+            <tr>
+                <td style="text-align:center; padding: 20px 0 20px 0">
+                </td>
+                <td style="text-align:center; padding: 20px 0 20px 0">
+                <button type="submit">Save Changes</button>
+                </td>
+                </tr>
+            </tbody>
+            </table>
+        </form> 
 
-    <!-- Completion Date -->
-    <form action="./research_edit" method="POST">
-        <label for="category">
-            <input type="text" value="date" name="category" style="display: none;" />
-        </label>
-        <label for="expected_completion_date">
-            <input type="text" value="<%=expected_completion_date%>" name="expected_completion_date" required />
-        </label>
-        <button type="submit">SUBMIT</button>
-    </form>
-    
-    <!-- Students -->
-    <form action="./research_edit" method="POST">
-        <label for="category">
-            <input type="text" value="students" name="category" style="display: none;" />
-        </label>
-        <% if(students.length != 0) { %>
-        <% for(let i=0; i<students.length; i++) {%>
-        <label for="students">
-            <input type="text" value="<%=students[i]%>" name="students" required />
-        </label>
-        <% } %>
-        <button type="submit">SUBMIT</button>
-        <% } %>
-    </form>
+        <!-- Proposers -->
+        <form action="./research_edit" method="POST">
+            <label for="category">
+            <input
+                type="text"
+                value="proposers"
+                name="category"
+                style="display: none;"
+            />
+            </label>
+            <table border="0" cellpadding="3">
+            <% if(proposers.length != 0) { %>
+                <% for(let i=0; i<proposers.length; i++) {%>
+                    <tr id="label">
+                    <td>Proposer <%=i+1%></td>
+                    <td>     
+                        <label for="proposers">
+                            <input type="text" value="<%=proposers[i]%>" name="proposers" required />
+                        </label>
+                    </td>
+                </tr>
+                <% } %>
+                <% } %>
+            <tr>
+                <td style="text-align:center; padding: 20px 0 20px 0">
+                </td>
+                <td style="text-align:center; padding: 20px 0 20px 0">
+                <button type="submit">Save Changes</button>
+                </td>
+                </tr>
+            </tbody>
+            </table>
+        </form> 
+
+        <!-- Completion Date -->
+        <form action="./club_edit" method="POST">
+            <label for="category">
+            <input
+                type="text"
+                value="date"
+                name="category"
+                style="display: none;"
+            />
+            </label>
+            <table border="0" cellpadding="3">
+            <tr id="label">
+                <td>Expected Completion Date</td>
+                <td>      
+                    <label for="expected_completion_date">
+                        <input type="text" value="<%=expected_completion_date%>" name="expected_completion_date" required />
+                    </label>
+                </td>
+            </tr>
+            <tr>
+                <td style="text-align:center; padding: 20px 0 20px 0">
+                </td>
+                <td style="text-align:center; padding: 20px 0 20px 0">
+                <button type="submit">Save Changes</button>
+                </td>
+                </tr>
+            </tbody>
+            </table>
+        </form>  
+
+        
+        <!-- Students -->
+        <form action="./research_edit" method="POST">
+            <label for="category">
+            <input
+                type="text"
+                value="students"
+                name="category"
+                style="display: none;"
+            />
+            </label>
+            <table border="0" cellpadding="3">
+            <% if(students.length != 0) { %>
+                <% for(let i=0; i<students.length; i++) {%>
+                    <tr id="label">
+                    <td>Student <%=i+1%></td>
+                    <td>     
+                        <label for="students">
+                            <input type="text" value="<%=students[i]%>" name="students" required />
+                        </label>
+                    </td>
+                </tr>
+                <% } %>
+                <% } %>
+            <tr>
+                <td style="text-align:center; padding: 20px 0 20px 0">
+                </td>
+                <td style="text-align:center; padding: 20px 0 20px 0">
+                <button type="submit">Save Changes</button>
+                </td>
+                </tr>
+            </tbody>
+            </table>
+        </form> 
 
   </body>
 </html>
