News and schedule done

--- a/views/student_portal_pages/page[0].ejs
+++ b/views/student_portal_pages/page[0].ejs
@@ -70,11 +70,33 @@
       <h2 style="align-self: center; color: var(--secondary);">
         College News
       </h2>
+      <p>02 May 2020</p>
       <a
         href="https://www.iiitm.ac.in/index.php/en/component/content/category/79-latest-news?Itemid=437"
         style="align-self: center; color: var(--secondary);"
         target="_blank"
-        ><%=newsHead%></a
+        >Essential Items Distribution Camp Organized by ABV-IIITM, Gwalior</a
+      >
+      <p>17 April 2020</p>
+      <a
+        href="https://www.iiitm.ac.in/index.php/en/component/content/article/79-latest-news/293-notice-regarding-covid-19-dated-27th-march-2020?Itemid=437"
+        style="align-self: center; color: var(--secondary);"
+        target="_blank"
+        >Notice regarding Covid-19 dated 17.04.2020</a
+      >
+      <p>27 March 2020</p>
+      <a
+        href="https://www.iiitm.ac.in/index.php/en/component/content/category/79-latest-news?Itemid=437"
+        style="align-self: center; color: var(--secondary);"
+        target="_blank"
+        >Notice regarding Covid-19 dated 27th March 2020</a
+      >
+      <p>19 March 2020</p>
+      <a
+        href="https://www.iiitm.ac.in/index.php/en/component/content/article/79-latest-news/290-notice-regarding-covid-19?Itemid=437"
+        style="align-self: center; color: var(--secondary);"
+        target="_blank"
+        >Notice Regarding COVID-19</a
       >
     </div>
   </div>
