--- a/views/student_portal_pages/page[3].ejs
+++ b/views/student_portal_pages/page[3].ejs
@@ -1,20 +1,25 @@
 <style>
-    .Element {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-        border-radius: 1em;
-        height: 300px;
-        padding-top: 10px;
-        margin-bottom: 20px;
-        background-color: var(--primary);
-    }
+  .Element {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    border-radius: 1em;
+    height: 300px;
+    padding-top: 10px;
+    margin-bottom: 20px;
+    background-color: var(--primary);
+  }
 </style>
-<div style="display: flex; flex-direction: column; width: 100%; padding: 10px 0px">
-    <div class="Element">
-        <h3 style="align-self: center;">Class Schedule</h3>
-    </div>
-    <div class="Element" style="margin-bottom: 0px;">
-        <h3 style="align-self: center;">Academic Calendar</h3>
-    </div>
+<div
+  style="display: flex; flex-direction: column; width: 100%; padding: 10px 0px;"
+>
+  <div class="Element">
+    <h3 style="align-self: center;">Class Schedule</h3>
+    <% for (time in studentSchedule) { %>
+    <p><%=time%>: <%=studentSchedule[time]%></p>
+    <% } %>
+  </div>
+  <div class="Element" style="margin-bottom: 0px;">
+    <h3 style="align-self: center;">Academic Calendar</h3>
+  </div>
 </div>
