--- a/views/faculty_portal_pages/page[0].ejs
+++ b/views/faculty_portal_pages/page[0].ejs
@@ -1,8 +1,4 @@
 <style>
-  label {
-    margin-right: 5px;
-  }
-
   .LeftContainer {
     flex: 3;
     display: flex;
@@ -36,7 +32,6 @@
     height: calc(100% - 20px);
   }
 </style>
-<% var f_name = "Vishnu Sir"; assignment_number = "Assignments"%>
 <div style="display: flex; width: 100%; justify-content: space-between;">
   <div class="LeftContainer">
     <div>
@@ -46,45 +41,63 @@
       </h1>
       <img src="/assets/man_with_laptop.png" height="150px" />
     </div>
-    <div style="height: 300px; padding: 0; width: 100%; flex-direction: column;">
-      <div style="
-        display: flex;
-        flex: 1;
+    <div
+      style="
+        background-color: var(--primary);
         padding: 0px 30px;
-        height: 100%;
-        margin: 0;
+        height: 100px;
         width: calc(100% - 60px);
         justify-content: flex-start;
-      ">
-        <i class="material-icons" style="color: white; font-size: 60px; margin-top: 20px">done_all</i>
-        <h2 style="margin-left: 50px; color: var(--secondary);">
-          <%=assignment_number%> <br />
-        </h2>
-      </div>
-      <!-- TODO add link in action method -->
-      <div style="height: 100%; flex: 2; margin: 0">
-        <form action=""; method="POST">
-          <label>Subject Code: </label>
-          <input type="text"; placeholder="XXXNNNN" name="subjectCode">
-          <br><br><label>Assignment Name: </label>
-          <input type="text"; placeholder="Assignment Name" name="assignmentName">
-          <br><br><label>Due Date:</label>
-          <input type="text"; placeholder="Date Format" name="dueDate">
-          <br><br><input type="submit"; value="Add" name="action">
-          <input type="submit"; value="Remove" name="action">
-          <input type="submit"; value="Edit" name="action">
-        </form>
-      </div>
+      "
+    >
+      <i
+        class="material-icons"
+        style="color: white; align-self: center; font-size: 60px;"
+        >done_all</i
+      >
+      <h2 style="margin-left: 50px; color: var(--secondary);">
+        <%=assignment_number%> are due!
+      </h2>
     </div>
-    <div style="
+    <div
+      style="
         background-color: var(--primary);
         flex-direction: column;
         height: 200px;
         margin-bottom: 0px;
-      ">
+      "
+    >
       <h2 style="align-self: center; color: var(--secondary);">
         College News
       </h2>
+      <p>02 May 2020</p>
+      <a
+        href="https://www.iiitm.ac.in/index.php/en/component/content/category/79-latest-news?Itemid=437"
+        style="align-self: center; color: var(--secondary);"
+        target="_blank"
+        >Essential Items Distribution Camp Organized by ABV-IIITM, Gwalior</a
+      >
+      <p>17 April 2020</p>
+      <a
+        href="https://www.iiitm.ac.in/index.php/en/component/content/article/79-latest-news/293-notice-regarding-covid-19-dated-27th-march-2020?Itemid=437"
+        style="align-self: center; color: var(--secondary);"
+        target="_blank"
+        >Notice regarding Covid-19 dated 17.04.2020</a
+      >
+      <p>27 March 2020</p>
+      <a
+        href="https://www.iiitm.ac.in/index.php/en/component/content/category/79-latest-news?Itemid=437"
+        style="align-self: center; color: var(--secondary);"
+        target="_blank"
+        >Notice regarding Covid-19 dated 27th March 2020</a
+      >
+      <p>19 March 2020</p>
+      <a
+        href="https://www.iiitm.ac.in/index.php/en/component/content/article/79-latest-news/290-notice-regarding-covid-19?Itemid=437"
+        style="align-self: center; color: var(--secondary);"
+        target="_blank"
+        >Notice Regarding COVID-19</a
+      >
     </div>
   </div>
   <div class="RightContainer">
