Admin portal improved

--- a/views/admin_edit.ejs
+++ b/views/admin_edit.ejs
@@ -114,7 +114,7 @@
           left:385px;
           border-radius: 10px;
           width:150px;"
-          onclick="window.location.href = '/admin/admin_portal';">Go Back</button>
+          onclick="window.location.href = '/admin/portal';">Go Back</button>
         <img id="photo" src="<%=photo%>">
       </div>
       <div id="info"  style="float:none">
@@ -145,7 +145,7 @@
               <td>Middle Name</td>
               <td>      
                 <label for="m_name">
-                <input type="text" value="<%=m_name%>" name="m_name" required />
+                <input type="text" value="<%=m_name%>" name="m_name"/>
                 </label>
               </td>
             </tr>
@@ -192,7 +192,7 @@
             </tr>
             <tr>
               <td style="text-align:center; padding: 20px 0 20px 0">
-<!--               <a href="/admin/admin_portal">
+<!--               <a href="/admin/portal">
               <div class="bt" style="width:150px; text-align:center">Go Back</div>
               </a> -->
               </td>
