--- a/views/club_edit.ejs
+++ b/views/club_edit.ejs
@@ -116,7 +116,7 @@
         left:350px;
         border-radius: 10px;
         width:150px;"
-        onclick="window.location.href = '/admin/admin_portal';">Go Back</button>
+        onclick="window.location.href = '/admin/portal';">Go Back</button>
       <div id="info"  style="float:none">
       
         <!-- Club ID & Name -->
