--- a/views/faculty_edit.ejs
+++ b/views/faculty_edit.ejs
@@ -117,7 +117,7 @@
         left:350px;
         border-radius: 10px;
         width:150px;"
-        onclick="window.location.href = '/admin/admin_portal';">Go Back</button>
+        onclick="window.location.href = '/admin/portal';">Go Back</button>
       <div id="info"  style="float:none">
             <!-- Name -->
       <form action="./faculty_edit" method="POST">
@@ -150,7 +150,7 @@
             <td>Middle Name</td>
             <td>      
               <label for="m_name">
-              <input type="text" value="<%=m_name%>" name="m_name" required />
+              <input type="text" value="<%=m_name%>" name="m_name"/>
               </label>
             </td>
           </tr>
@@ -236,7 +236,7 @@
             <td>D.O.B.</td>
             <td>      
               <label for="dob">
-              <input type="text" value="<%=dob%>" name="dob" required />
+              <input type="text" value="<%=dob%>" name="dob" placeholder="YYYYMMDD" required />
               </label>
             </td>
           </tr>
