--- a/views/faculty_portal_pages/page[0].ejs
+++ b/views/faculty_portal_pages/page[0].ejs
@@ -1,4 +1,8 @@
 <style>
+  label {
+    margin-right: 5px;
+  }
+
   .LeftContainer {
     flex: 3;
     display: flex;
@@ -13,7 +17,6 @@
   .LeftContainer div {
     display: flex;
     width: calc(100% - 20px);
-    height: 170px;
     padding: 0px 10px;
     border-radius: 1em;
     justify-content: space-between;
@@ -31,73 +34,115 @@
     padding: 10px;
     height: calc(100% - 20px);
   }
+
+  .UpcomingEventsDiv {
+    border-bottom: 3px solid var(--secondary);
+  }
+
+  .LeftContainer div .CollegeNewsDiv {
+    display: flex;
+    flex-direction: column;
+    width: calc(100% - 40px);
+    border-radius: 0;
+    padding-bottom: 5px;
+    border-bottom: 3px solid var(--secondary);
+  }
+
+  .CollegeNewsDiv p {
+    font-size: small;
+  }
+
+  .CollegeNewsDiv a {
+    font-size: medium;
+    text-decoration: none;
+    font-weight: bold;
+  }
 </style>
+<% var f_name = "Vishnu";%>
 <div style="display: flex; width: 100%; justify-content: space-between;">
   <div class="LeftContainer">
     <div>
       <h1 style="color: var(--secondary);">
-        Hello, <%=f_name%>!<br />
+        Hello, Dr. <%=f_name%>!<br />
         Welcome Back!
       </h1>
       <img src="/assets/man_with_laptop.png" height="150px" />
     </div>
-    <div
-      style="
-        background-color: var(--primary);
-        padding: 0px 30px;
-        height: 100px;
-        width: calc(100% - 60px);
-        justify-content: flex-start;
-      "
-    >
-      <i
-        class="material-icons"
-        style="color: white; align-self: center; font-size: 60px;"
-        >done_all</i
-      >
-      <h2 style="margin-left: 50px; color: var(--secondary);">
-        <%=assignment_number%> are due!
+    <div style="flex-direction: column; padding: 10px">
+      <h2 style="align-self: center; color: var(--secondary);">
+        Class Schedule
       </h2>
+      <table>
+        <tbody>
+          <tr>
+            <td><strong>Time</strong></td>
+            <td><strong>Subject</strong></td>
+          </tr>
+          <tr>
+            <td><strong>9-10</strong></td>
+            <td>BCS1101 - Maths</td>
+          </tr>
+          <tr>
+            <td><strong>10-11</strong></td>
+            <td>BCS1201 - DCS</td>
+          </tr>
+          <tr>
+            <td><strong>11-12</strong></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td><strong>12-01</strong></td>
+            <td>IMT1201 - DBS</td>
+          </tr>
+          <tr>
+            <td><strong>02-03</strong></td>
+            <td>IMT1201 - Maths</td>
+          </tr>
+          <tr>
+            <td><strong>03-04</strong></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td><strong>04-05</strong></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td><strong>05-06</strong></td>
+            <td>BCS1201 - DCS</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
-    <div
-      style="
-        background-color: var(--primary);
+    <div style="
         flex-direction: column;
-        height: 200px;
         margin-bottom: 0px;
-      "
-    >
+      ">
       <h2 style="align-self: center; color: var(--secondary);">
         College News
       </h2>
-      <p>02 May 2020</p>
-      <a
-        href="https://www.iiitm.ac.in/index.php/en/component/content/category/79-latest-news?Itemid=437"
-        style="align-self: center; color: var(--secondary);"
-        target="_blank"
-        >Essential Items Distribution Camp Organized by ABV-IIITM, Gwalior</a
-      >
-      <p>17 April 2020</p>
-      <a
-        href="https://www.iiitm.ac.in/index.php/en/component/content/article/79-latest-news/293-notice-regarding-covid-19-dated-27th-march-2020?Itemid=437"
-        style="align-self: center; color: var(--secondary);"
-        target="_blank"
-        >Notice regarding Covid-19 dated 17.04.2020</a
-      >
-      <p>27 March 2020</p>
-      <a
-        href="https://www.iiitm.ac.in/index.php/en/component/content/category/79-latest-news?Itemid=437"
-        style="align-self: center; color: var(--secondary);"
-        target="_blank"
-        >Notice regarding Covid-19 dated 27th March 2020</a
-      >
-      <p>19 March 2020</p>
-      <a
-        href="https://www.iiitm.ac.in/index.php/en/component/content/article/79-latest-news/290-notice-regarding-covid-19?Itemid=437"
-        style="align-self: center; color: var(--secondary);"
-        target="_blank"
-        >Notice Regarding COVID-19</a
-      >
+      <div class="CollegeNewsDiv">
+        <p>02 May 2020</p>
+        <a href="https://www.iiitm.ac.in/index.php/en/component/content/category/79-latest-news?Itemid=437"
+          target="_blank">Essential Items Distribution Camp
+          Organized by ABV-IIITM, Gwalior</a>
+      </div>
+      <div class="CollegeNewsDiv">
+        <p>17 April 2020</p>
+        <a href="https://www.iiitm.ac.in/index.php/en/component/content/article/79-latest-news/293-notice-regarding-covid-19-dated-27th-march-2020?Itemid=437"
+          target="_blank">Notice regarding Covid-19 dated
+          17.04.2020</a>
+      </div>
+      <div class="CollegeNewsDiv">
+        <p>27 March 2020</p>
+        <a href="https://www.iiitm.ac.in/index.php/en/component/content/category/79-latest-news?Itemid=437"
+          target="_blank">Notice regarding Covid-19 dated 27th March
+          2020</a>
+      </div>
+      <div class="CollegeNewsDiv">
+        <p>19 March 2020</p>
+        <a href="https://www.iiitm.ac.in/index.php/en/component/content/article/79-latest-news/290-notice-regarding-covid-19?Itemid=437"
+          target="_blank">Notice Regarding COVID-19</a>
+      </div>
     </div>
   </div>
   <div class="RightContainer">
@@ -105,6 +150,21 @@
       <h2 style="align-self: center; color: var(--secondary);">
         Upcoming Events!
       </h2>
+      <div class="UpcomingEventsDiv" style="height: fit-content; border-radius: 0px; padding-bottom: 0px;">
+        <h2>
+          Webinar on Advanced Front End Web Development With React
+        </h2>
+      </div>
+      <div class="UpcomingEventsDiv" style="height: fit-content; border-radius: 0px; padding-bottom: 0px;">
+        <h2>
+          GDG Gwalior, Blockchain 101 on Tezos
+        </h2>
+      </div>
+      <div class="UpcomingEventsDiv" style="height: fit-content; border-radius: 0px; padding-bottom: 0px;">
+        <h2>
+          Opening Lockdown,
+        </h2>
+      </div>
     </div>
   </div>
 </div>
