--- a/views/faculty_portal_pages/page[3].ejs
+++ b/views/faculty_portal_pages/page[3].ejs
@@ -8,18 +8,33 @@
     <div class="Element">
         <h3 class="Page3Heading">CLASSES</h3>
         <form action="" ; method="POST" style="align-self: center;">
-          <label>Subject Code: </label>
-          <input type="text" ; placeholder="XXXNNNN" name="subjectCode">
-          <br><br><label>Faculty Code: </label>
-          <input type="text" ; placeholder="Faculty code" name="facultyCode">
-          <br><br><label>Starting Time:</label>
-          <input type="text" ; placeholder="Time" name="startingTime">
-          <br><br><label>Ending Time:</label>
-          <input type="text" ; placeholder="Time" name="endingTime">
-          <br><br><input type="submit" ; value="Add" name="action">
-          <input type="submit" ; value="Remove" name="action">
+            <table>
+                <tbody class="FormTbody">
+                    <tr>
+                        <td><label>Subject Code</label></td>
+                        <td><input type="text" ; placeholder="XXXNNNN" name="subjectCode"></td>
+                    </tr>
+                    <tr>
+                        <td><label>Faculty Code</label></td>
+                        <td><input type="text" ; placeholder="Faculty code" name="facultyCode"></td>
+                    </tr>
+                    <tr>
+                        <td><label>Starting Time</label></td>
+                        <td><input type="text" ; placeholder="Time" name="startingTime"></td>
+                    </tr>
+                    <tr>
+                        <td><label>Ending Time</label></td>
+                        <td><input type="text" ; placeholder="Time" name="endingTime"></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td><input type="submit" ; value="Add" name="action">
+                            <input type="submit" ; value="Remove" name="action"></td>
+                    </tr>
+                </tbody>
+            </table>
         </form>
-      </div>
+    </div>
     <div class="Element" style="margin-bottom: 0px;">
         <h3 class="Page3Heading">Academic Calendar</h3>
         <table width="100%">
