--- a/views/faculty_portal_pages/page[3].ejs
+++ b/views/faculty_portal_pages/page[3].ejs
@@ -28,8 +28,10 @@
                     </tr>
                     <tr>
                         <td></td>
-                        <td><input type="submit" ; value="Add" name="action">
-                            <input type="submit" ; value="Remove" name="action"></td>
+                        <td style="display: flex; justify-content: space-between;">
+                            <input type="submit" ; value="Add" name="action">
+                            <input type="submit" ; value="Remove" name="action">
+                        </td>
                     </tr>
                 </tbody>
             </table>
